<?xml version="1.0"?>
<package format="2">
    <name>turtlesim_controller</name>
    <version>0.0.0</version>
    <description>The turtlesim_controller package</description>
    <maintainer email="ryosuke.takizawa.25@gmail.com">RyosukeTakizawa</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>roscpp</depend>
    <depend>turtlesim</depend>
</package>
